--- a/content/posts/tech/leetcode/2267.md
+++ b/content/posts/tech/leetcode/2267.md
@@ -1,5 +1,5 @@
 ---
-title: "22267. 检查是否有合法括号字符串路径267"
+title: "2267. 检查是否有合法括号字符串路径"
 date: 2022-05-11T22:42:51+08:00
 lastmod: 2022-05-11T22:42:51+08:00
 author: ["Chang Liu"]
