--- a/content/posts/read/2023-04.md
+++ b/content/posts/read/2023-04.md
@@ -27,6 +27,41 @@ showbreadcrumbs: true #顶部显示当前路径
 - 需要把主要人物的关系图整理一下，才能更好理解。
 - ^^子贵母死^^ 的制度真是残忍，本来是为了避免外戚乱权，却被几任皇太后利用来维持自己的地位。
 
+``` mermaid
+%%{init: {'theme':'neutral'}}%%
+
+flowchart TD
+    XiaoWD[孝文帝]
+    FHH[冯皇后]
+    CTH[常太后]
+    WCD[文成帝]
+    XianWD[献文帝]
+    DFHH[大冯皇后]
+    XFHH[小冯皇后]
+    XWD[宣武帝]
+    GZR[高照容]
+    YX[元恂]
+    subgraph 皇帝
+    WCD==长子==>XianWD==长子==>XiaoWD==次子==>XWD
+     XiaoWD==长子==>YX
+    end
+     
+    subgraph 皇后
+    CTH--选立-->FHH
+  FHH--侄女-->DFHH
+  FHH--侄女-->XFHH
+   DFHH--杀死-->GZR
+   end
+    CTH--乳母-->WCD
+    FHH--乳母-->XianWD
+    FHH--杀死生母从小抚养-->XiaoWD
+    XiaoWD--皇后-->DFHH
+    XiaoWD--皇后-->XFHH
+    GZR--生母-->XWD
+    DFHH--抚养-->XWD
+    XFHH--抚养-->YX
+```
+
 # 父母的语言
 
 这本书的核心观点是小朋友3岁前接受到语言词汇对于智力发育有很大的影响。按照作者统计，经济差异大的家庭之间有3 kw的单词数差异。
