--- a/content/posts/read/2023-04.md
+++ b/content/posts/read/2023-04.md
@@ -1,5 +1,5 @@
 ---
-title: "2023 04 读书分享"
+title: "2023 04 读书分享：漫长的余生、父母的语言"
 date: 2023-05-04T13:09:42+08:00
 lastmod: 2023-05-04T13:09:42+08:00
 author: ["Chang Liu"]
