--- a/content/posts/read/2023-05.md
+++ b/content/posts/read/2023-05.md
@@ -1,5 +1,5 @@
 ---
-title: "2023 05 读书分享"
+title: "2023 05 读书分享：城乡中国、王氏之死"
 date: 2023-06-05T22:11:33+08:00
 lastmod: 2023-06-05T22:11:33+08:00
 author: ["Chang Liu"]
