--- a/content/posts/read/2023-07.md
+++ b/content/posts/read/2023-07.md
@@ -25,7 +25,7 @@ cover:
     relative: false
 ---
 
-这本书主要包含两个部分，第一个部分介绍了清代行政体系下几个主要角色的方方面面，包括职责、如何认命监管、怎么获取陋规，第二个部分介绍清朝司法税务等主要部门的运行机制。
+这本书主要包含两个部分，第一个部分介绍了清代行政体系下几个主要角色的方方面面，包括职责、如何认命监管、怎么获取陋规，第二个部分介绍清朝司法税务等主要部门的运行机制。非常推荐。
 
 前半本书阅读下来，感想就是“百姓苦啊，只要和官府打交道就要被所有角色剥削”。统治阶级也知道这些陋规的存在，但是默认了这些行为，甚至将其中一些陋规合法化，不然无法维持整个行政体系。
 
