--- a/content/posts/read/2026-02-大决战.md
+++ b/content/posts/read/2026-02-大决战.md
@@ -40,3 +40,8 @@ cover:
 书中详细介绍了他打散中央军，和嫡系将领沟通，对蒋介石说议和是为了欺骗共党争取利益，多次派代表沟通争取更大利益。提供飞机让蒋嫡系将领飞回南京。化整为零让部队出城接受改编。
 
 
+## 关于方法论
+
+教员对于如何打仗，有一整套的方法论，总是可以站在更高的维度，给出关键的意见。在三大决战的时候就确定“人比地重要“的战略，对于城市甚至延安根据地都可以暂时退让，但是一定要保存战力。不以抢占城市为目标，而是以消灭国民党战力为目标。**存地失人 人地皆失 存人失地 人地皆存**
+
+找出关键矛盾，确定最核心的问题。在辽沈战役的时候，主动决战打下锦州，盘活整个棋局。在淮海战役的时候，明确以歼灭“黄百韬兵团“为最大目标。
